style.css
* {
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
    box-sizing: border-box;
}

body {
    background-color: black;
    color: #fff;
}

#header {
    width: 100%;
    height: 100vh;
    background-image: url(images/axlBack.JPG);
    background-size: cover;
    background-position: center;
}

.container {
    padding: 10px 10%;
}

nav {
    display: flex;
    align-items: 'center';
    justify-content: space-between;
    flex-wrap: wrap;
}

.logo {
    width: 140px;
    height: 100px;
}

/*menu options*/
nav ul li {
    display: inline-block;
    list-style: none;
    margin: 10px 5px;
}

nav ul li a {
    color: #fff;
    text-decoration: none;
    font-size: 18;
    position: relative;
}

nav ul li a::after {
    content: '';
    width: 0%;
    height: 3px;
    background: #FFD700;
    position: absolute;
    left: 0;
    bottom: -6px;
    transition: 0.5s;
}

nav ul li a:hover::after {
    width: 100%;
}

/*Main Text*/
.header-text {
    margin-top: 20%;
    font-size: 30px;
}

.header-text h1 {
    font-size: 60px;
    margin-top: 20px;
}

.header-text h1 span {
    color: #FFD700;
}

/*About*/
#About {
    padding: 80px 0px;
    color: #ababab;
}

.row {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

#axlBird {
    width: 500px;
    height: 500px;
}

.about-col-1 {
    flex-basis: 35%;
}

.about-col-1 img {
    width: 100%;
    border-radius: 15px;
}

.about-col-2 {
    flex-basis: 60%;
}

.subtitle {
    font-size: 60px;
    font-weight: 600;
    color: white;
}

/*about me  tab section*/
.tab-titles {
    display: flex;
    margin: 20px 40px;
}

.tab-links {
    margin: 50px;
    font-size: 18px;
    font-weight: 500;
    cursor: pointer;
    position: relative;
}

.tab-links::after {
    content: '';
    width: 0;
    height: 3px;
    background: #FFD700;
    position: absolute;
    left: 0;
    bottom: -8px;
    transition: 0.5s;
}

.tab-links.active-link::after {
    width: 50%;
}

.tab-contents ul li {
    list-style: none;
    margin: 10px 0;
}

.tab-contents ul li span {
    color: #FFD700;
    font-size: 14px;
}

.tab-contents {
    display: none;
}

.tab-contents.active-tab {
    display: block;
}

/*Services*/
.services {
    padding: 30px 0px;
}

.services-list {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    grid-gap: 40px;
    margin-top: 50px;
}

.services-list div {
    background: #262626;
    padding: 40px;
    font-size: 13px;
    font-weight: 300;
    border-radius: 10px;
    transition: 0.5s, transform 0.5s;
}

.services-list i {
    font-size: 50px;
    margin-bottom: 10px;
}

.services-list div h2 {
    font-size: 30px;
    font-weight: 500;
    margin-bottom: 15px;
}

.services-list div a {
    text-decoration: none;
    color: #fff;
    font-size: 12px;
    margin-top: 20px;
    display: inline-block;
}

.services-list div:hover {
    background: #FFD700;
    transform: translateY(-10px);
}

.portfolio {
    padding: 50px 0px;
}

.work-list {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    grid-gap: 40px;
    margin-top: 50px;
}

#wind {
}

.work {
    border-radius: 10px;
    position: relative;
    overflow: hidden;
}

.work img {
    width: 100%;
    border-radius: 10px;
    display: block;
    transition: transform 0.5s;
}

.layer {
    width: 100%;
    height: 0%;
    background: linear-gradient(rgba(0, 0, 0, 0.6), #FFD700);
    border-radius: 10px;
    position: absolute;
    left: 0;
    bottom: 0;
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction:column;
    padding: 0 40px;
    text-align: center;
    font-size: 14px;
    transition: height 0.5s ;
}
.layer h3{
    font-weight: 500;
    margin-bottom: 20px;
}
.layer a{
    margin-top: 20px;
    color: #FFD700;
    text-decoration: none;
    font-size: 18px;
    line-height: 60px;
    background: #FFF;
    width: 60px;
    height: 60px;
    border-radius: 50%;
    text-align: center;
}
.work:hover img{
    transform: scale(1.1);
}
.work:hover .layer{
    height: 100%;
}
.btn{
    display: block;
    margin: 50px auto;
    width: fit-content;
    border: 1px solid #FFD700;
    padding: 14px 50px;
    border-radius: 6px;
    text-decoration: none;
    color: #FFF;
    transition: background 0.5s;
}
.btn:hover{
    background: #FFD700;
}
/*Contact*/
.contact-left{
    flex-basis: 35%;
}
.contact-right{
    flex-basis: 60%;
}
.contact-left p{
    margin-top: 30px;
}
.contact-left p i{
    color: #FFD700;
    margin-right: 15px;
    font-size: 25px;
}
.social-icons{
    margin: 30px;
}
.social-icons a{
    text-decoration: none;
    font-size: 30px;
    margin-right: 15px;
    transition: transform(0.5s) ;
    display: inline-block;
    color: #ababab;
}
.social-icons a:hover{
    color: #FFD700;
    transform: translateY(-5px);
}
.btn.btn2{
    display: inline-block;
    background: #FFD700;
}
.contact-right form{
    width: 100%;
}
form input, form textarea{
    width:100%;
    border: 0;
    outline:none;
    background: #262626;
    padding: 15px;
    margin: 15px 0;
    color: #FFF;
    font-size: 18px;
    border-radius: 6px;
}
form .btn2{
    padding: 14px 60px;
    font-size: 18px;
    margin-top: 20px;
    cursor: pointer;
}
/**********Mobile CSS*************/
@media only screen and (max-width: 600px){
    #header{
        background-image: url(images/axlBackmobile.jpg);
    }
    .header-text {
        margin-top: 100%;
        font-size: 16px;
    }
    
    .header-text h1 {
        font-size: 30px;
    }

}

